k8s/ingress/config-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-server-ingress
spec:
  rules:
    - host: localhost # Change this to your desired hostname
      http:
        paths:
          - path: /config
            pathType: Prefix
            backend:
              service:
                name: config-server-app # Change this to match your config server name
                port:
                  number: 9296 # Change this to match your config server port
