k8s/ingress/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: localhost # Change this to your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc # Change this to match your frontend service name
                port:
                  number: 3000 # Change this to match your frontend service port
