k8s/ingress/quiz-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-service-ingress
spec:
  rules:
    - host: localhost # Change this to your desired hostname
      http:
        paths:
          - path: /quiz
            pathType: Prefix
            backend:
              service:
                name: quiz-service-app # Change this to match your quiz service name
                port:
                  number: 8090 # Change this to match your quiz service port
